# Vencord-Launcher

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
crates/xtask-prepare-release/src/: main.rs
installers/NSIS/: headers.nsh  installer.nsi
installers/NSIS/sections/: install.nsi  uninstall.nsi
installers/linux-sh/: install.sh
src/: constants.rs  discord.rs  lib.rs  unix.rs  windows.rs
